[package]
name         = "yaml-ed"
version      = "0.1.0"
edition      = "2021"
authors      = ["A. Drossos"]
description  = "Manipulation of yaml files"
readme       = "README.md"
license      = "GPL-3.0-or-later"
homepage     = "https://github.com/DevelAngel/rust-yaml-ed"
repository   = "https://github.com/DevelAngel/rust-yaml-ed"
keywords     = ["cli", "yaml"]
categories   = ["command-line-utilities"]
rust-version = "1.67"
publish      = false # alpha

[lib]
name = "yaml_ed"
path = "src/lib.rs"

[[bin]]
name = "yaml-ed"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap"]

[dependencies]
anyhow = "1.0.69"
thiserror = "1.0"
yaml-rust = "0.4.5"
clap = { version = "4.1.4", features = ["derive"], optional = true }

[dev-dependencies]
assert_cmd = { version = "2.0.8", features = ["color", "color-auto"] }
assert_fs = { version = "1.0.10", features = ["color", "color-auto"] }
indoc = "2.0.0"
predicates = { version = "2.1.5", features = ["color", "color-auto"] }
